03_infrastructure/database/ingress/overlays/dev/ingressroute-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: postgres
spec:
  routes:
    - match: Host(`postgres.host.k3d.internal`)
      kind: Rule
      services:
        - name: postgres-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: postgres-tls
spec:
  routes:
    - match: Host(`postgres.host.k3d.internal`)
      kind: Rule
      services:
        - name: postgres-gatekeeper
          port: 3000
